# opendsm

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  NOTES.md  Pipfile  README.md  docker-compose.yml  index.html  objects.inv  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs_deployment.yaml  test.yml  update-win-snapshots.yml
community/: index.html
docs/: mkdocs.yml  requirements.txt
docs/site/: 404.html
docs/source/: index.md
docs/source/learn/: daily_billing_model.md  index.md
documentation/: index.html
documentation/drmeter/: index.html
documentation/drmeter/basics/: index.html
documentation/drmeter/new_model/: index.html
documentation/eemeter/: index.html
documentation/eemeter/basics/: index.html
documentation/eemeter/daily_billing_model/: index.html
documentation/eemeter/hourly_model/: index.html
documentation/general_concepts/: index.html
documentation/history/: index.html
documentation/philosophy/: index.html
install/: index.html
learn/: index.html
learn/daily_billing_model/: index.html
learn/hourly_model/: index.html
opendsm/: __init__.py  __version__.py
opendsm/common/: __init__.py  abstract_data_processor.py  adaptive_loss.py  adaptive_loss_Z.py  base_settings.py  const.py  hourly_interpolation.py  metrics.py  pydantic_utils.py  test_data.py  utils.py
opendsm/common/clustering/: __init__.py  bisect_k_means.py  cluster.py  metrics.py  scoring.py  settings.py  transform.py  voting.py
opendsm/common/stats/: adaptive_loss.py  adaptive_loss_Z.py  basic.py  outliers.py  outliers_transformed.py
opendsm/comparison_groups/: ARCHIVED_CHANGELOG.md  __init__.py
opendsm/comparison_groups/cg_clustering/: __init__.py  bounds.py  create_comparison_groups.py  settings.py  treatment_fit.py
opendsm/comparison_groups/common/: __init__.py  base_comparison_group.py  const.py  data.py  data_settings.py  tutorial_data.py
opendsm/comparison_groups/individual_meter_matching/: create_comparison_groups.py  distance_calc_selection.py  highs_settings.py  settings.py
opendsm/comparison_groups/random_sampling/: create_comparison_groups.py  settings.py
opendsm/comparison_groups/savings/: archived_dev.py  model_correction.py  settings.py
opendsm/comparison_groups/stratified_sampling/: bin_selection.py  bins.py  create_comparison_groups.py  diagnostics.py  equivalence.py  model.py  sampling.py  settings.py
opendsm/drmeter/: __init__.py
opendsm/drmeter/models/: __init__.py
opendsm/eemeter/: __init__.py
opendsm/eemeter/common/: data_processor_utilities.py  data_settings.py  exceptions.py  features.py  sufficiency_criteria.py  transform.py  warnings.py
opendsm/eemeter/models/: __init__.py
opendsm/eemeter/samples/: __init__.py  load.py
opendsm/eemeter/utilities/: io.py
reference/eemeter/billing_model/: index.html
reference/eemeter/daily_model/: index.html
reference/eemeter/daily_model_settings/: index.html
reference/eemeter/hourly_model/: index.html
reference/eemeter/utilities/: index.html
scripts/: data_and_model_tutorial.ipynb  docs_examples_v2.ipynb
search/: search_index.json
tests/: conftest.py  regression_metrics.py  syrupy_extensions.py  test_caltrack_design_matrices.py  test_caltrack_hourly.py  test_caltrack_hourly_regression.py  test_derivatives.py  test_exceptions.py  test_features.py  test_hourly_model.py  test_io.py  test_json_serialization.py  test_samples.py  test_segmentation.py  test_transform.py  test_version.py  test_warnings.py
tests/__snapshots__/test_caltrack_design_matrices/: test_create_caltrack_billing_design_matrix[design_matrix_shape].json  test_create_caltrack_billing_design_matrix[design_matrix_sum].json  test_create_caltrack_daily_design_matrix[design_matrix_sum].json  test_create_caltrack_hourly_preliminary_design_matrix[design_matrix_sum].json  test_create_caltrack_hourly_segmented_design_matrices[dec-jan-feb-weighted_columns].json  test_create_caltrack_hourly_segmented_design_matrices[dec-jan-feb-weighted_shape].json  test_create_caltrack_hourly_segmented_design_matrices[dec-jan-feb-weighted_sum].json  test_create_caltrack_hourly_segmented_design_matrices[mar-apr-may-weighted_columns].json  test_create_caltrack_hourly_segmented_design_matrices[mar-apr-may-weighted_sum].json
tests/__snapshots__/test_caltrack_hourly_regression/: test_caltrack_hourly_baseline_predict_regression[predicted_summary].json  test_caltrack_hourly_baseline_predict_regression[predicted_values].json  test_caltrack_hourly_baseline_predict_regression[regression].json
tests/__snapshots__/test_derivatives/: test_metered_savings_cdd_hdd_billing[metered_savings_sum].json  test_metered_savings_cdd_hdd_billing[metered_savings_values].json  test_metered_savings_cdd_hdd_billing_no_reporting_data[predicted_sum].json  test_metered_savings_cdd_hdd_billing_no_reporting_data[predicted_values].json  test_metered_savings_cdd_hdd_billing_single_record_baseline_data[metered_savings_sum].json  test_metered_savings_cdd_hdd_billing_single_record_baseline_data[metered_savings_values].json  test_metered_savings_cdd_hdd_billing_single_record_baseline_data[regression].json  test_metered_savings_cdd_hdd_billing_single_record_reporting_data[regression].json  test_metered_savings_cdd_hdd_daily[metered_savings_sum].json  test_metered_savings_cdd_hdd_daily[regression_win].json  (+19 more)
tests/common/: metrics.py  test_basic_stats.py  test_bisymlog.py  test_box_cox.py  test_data_loader.py  test_hourly_interpolation.py  test_metrics.py  test_pydantic_utils.py  test_shared.py  test_utils.py
tests/comparison_groups/: conftest.py  test_base_comparison_group.py  test_data.py
tests/daily_model/: test_billing_data.py  test_daily_data.py  test_daily_model.py
tests/drmeter/: test_caltrack_model.py
tests/snapshots/: snap_test_caltrack_design_matrices.py  snap_test_features.py  snap_test_json_serialization.py  snap_test_transform.py
website/: README.md  mkdocs.yml  requirements.txt
website/site/: index.html
website/src/: community.md  index.md  install.md
(+343 files in other folders)
