[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "opendsm"
version = "1.2.6"
description = "Standard methods for predicting building energy usage"   # set directly
# dynamic = ["version"]                                  # only version is dynamic
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "opendsm", email = "opendsm@lists.lfenergy.org" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "attrs",
  "click",
  "fdasrsf>=2.4.1",
  # "fdasrsf>=2.4.1,<=2.5.2", # library broken on higher versions. Issue tracked here https://github.com/jdtuck/fdasrsf_python/issues/41
  # "mkl-devel",  # needed for fdasrsf to work: https://github.com/jdtuck/fdasrsf_python/issues/41
  "nlopt",
  "numba",
  "numpy>=1.24.4",
  "pandas>=1.1.0,<=2.2.3", # cap at 2.2.3 to avoid test issues with reading in parquet files
  "pyarrow", # why?
  "pydantic>=2.0",
  "pywavelets",
  "requests",
  "scikit-learn>=1.3.0",
  "qpsolvers[highs]",
  "scikit-fda>0.7.1",
  "scikit-learn>=1.3.0",
  "scipy>=1.10.1",
  "statsmodels",
  "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
  "sqlalchemy",
  "eeweather>=0.3.12",
  "black",
  "coverage",
  "jupyterlab",
  "nbsphinx",
  "pytest",
  "pytest-cov",
  "pytest-profiling",
  "pytest-xdist",
  "snapshottest==0.6.0",
  "tox",
  "twine",
  "typing",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-include-markdown-plugin>=6.0",
  "mkdocstrings[python]>=0.30.0",
]

[tool.hatch.build.targets.wheel]
# non-src layout: the importable package directory is opendsm/opendsm
packages = ["opendsm"]

[project.urls]
Homepage = "https://lfenergy.org/projects/opendsm"
Documentation = "https://opendsm.energy"
Repository = "http://github.com/opendsm/opendsm"
Issues = "http://github.com/opendsm/opendsm/issues"

[project.scripts]
opendsm = "opendsm.cli:main"
